# px4-ros2-drone-lidar-avoidance

./: README.md  package.xml  setup.cfg  setup.py
config/: mission_params.yaml  offboard_params.yaml
drone_lidar_avoidance_py/: avoidance_manager.py  lidar_processor.py  mission_manager.py  obstacle_detector.py  offboard_control.py
launch/: mission_with_avoidance.launch.py
