<?xml version="1.0"?>
<package format="3">
  <name>drone_lidar_avoidance_py</name>
  <version>0.0.1</version>
  <description>PX4 ROS2 Python drone lidar aviodance node</description>
  <maintainer email="sjafarik@mtu.edu">Saeed Jafari Kang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>